{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 441,
  "lineage": "2f56a05d-8db6-87bc-14b2-aec87f39573f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4500f72aa6a150e",
            "domain": "vpc",
            "id": "eipalloc-0c4500f72aa6a150e",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-35-177-155-187.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.155.187",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-nat-ip"
            },
            "tags_all": {
              "Name": "terraform-nat-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d37e07bd4ff37148",
            "arn": "arn:aws:ec2:eu-west-2:672066337402:instance/i-0eb8145991209b66d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb8145991209b66d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-094f2e29b7b1447c8",
            "private_dns": "ip-10-0-1-200.eu-west-2.compute.internal",
            "private_ip": "10.0.1.200",
            "public_ip": "13.40.69.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-010a58ccba0745611",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05108d7a811e5a024",
            "tags": {
              "Name": "EC2 Instance"
            },
            "tags_all": {
              "Name": "EC2 Instance"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "20m"
            },
            "vpc_security_group_ids": [
              "sg-0e8c144d4613ec3fe"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:672066337402:internet-gateway/igw-05f7dcb8c6d09f386",
            "id": "igw-05f7dcb8c6d09f386",
            "owner_id": "672066337402",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-07cfddff981dce8ed"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4500f72aa6a150e",
            "connectivity_type": "public",
            "id": "nat-0f8a82d16afd6588b",
            "network_interface_id": "eni-072c29920d9a18d0a",
            "private_ip": "10.0.1.123",
            "public_ip": "35.177.155.187",
            "subnet_id": "subnet-05108d7a811e5a024",
            "tags": {
              "Name": "terraform-nat"
            },
            "tags_all": {
              "Name": "terraform-nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:672066337402:route-table/rtb-0d4f5f49b6ee74259",
            "id": "rtb-0d4f5f49b6ee74259",
            "owner_id": "672066337402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f8a82d16afd6588b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private"
            },
            "tags_all": {
              "Name": "terraform-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cfddff981dce8ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:672066337402:route-table/rtb-01c8d0772bfd0e5a4",
            "id": "rtb-01c8d0772bfd0e5a4",
            "owner_id": "672066337402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f7dcb8c6d09f386",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public"
            },
            "tags_all": {
              "Name": "terraform-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cfddff981dce8ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1c4fa8db02b5a23",
            "route_table_id": "rtb-0d4f5f49b6ee74259",
            "subnet_id": "subnet-088a5e5d37ece114e"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05877466f3b3de9f9",
            "route_table_id": "rtb-0d4f5f49b6ee74259",
            "subnet_id": "subnet-018615784b99d3bac"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a62b7e8e68a11e8",
            "route_table_id": "rtb-0d4f5f49b6ee74259",
            "subnet_id": "subnet-0b6b541161321e6b4"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private3",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9e9ac3f4aecb485",
            "route_table_id": "rtb-01c8d0772bfd0e5a4",
            "subnet_id": "subnet-05108d7a811e5a024"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeb51937611c91a1",
            "route_table_id": "rtb-01c8d0772bfd0e5a4",
            "subnet_id": "subnet-0cd3ac2d4c98afe14"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:672066337402:security-group/sg-0e8c144d4613ec3fe",
            "description": "This is for terraforms web servers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8c144d4613ec3fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-webSG",
            "name_prefix": "",
            "owner_id": "672066337402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-webSG"
            },
            "tags_all": {
              "Name": "terraform-webSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cfddff981dce8ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:672066337402:subnet/subnet-088a5e5d37ece114e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-088a5e5d37ece114e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672066337402",
            "tags": {
              "Name": "terraform-private-1"
            },
            "tags_all": {
              "Name": "terraform-private-1"
            },
            "vpc_id": "vpc-07cfddff981dce8ed"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:672066337402:subnet/subnet-018615784b99d3bac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-018615784b99d3bac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672066337402",
            "tags": {
              "Name": "terraform-private-2"
            },
            "tags_all": {
              "Name": "terraform-private-2"
            },
            "vpc_id": "vpc-07cfddff981dce8ed"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:672066337402:subnet/subnet-0b6b541161321e6b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0b6b541161321e6b4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672066337402",
            "tags": {
              "Name": "terraform-private-3"
            },
            "tags_all": {
              "Name": "terraform-private-3"
            },
            "vpc_id": "vpc-07cfddff981dce8ed"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:672066337402:subnet/subnet-05108d7a811e5a024",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05108d7a811e5a024",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672066337402",
            "tags": {
              "Name": "terraform-public-1"
            },
            "tags_all": {
              "Name": "terraform-public-1"
            },
            "vpc_id": "vpc-07cfddff981dce8ed"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:672066337402:subnet/subnet-0cd3ac2d4c98afe14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cd3ac2d4c98afe14",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672066337402",
            "tags": {
              "Name": "terraform-public-2"
            },
            "tags_all": {
              "Name": "terraform-public-2"
            },
            "vpc_id": "vpc-07cfddff981dce8ed"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:672066337402:vpc/vpc-07cfddff981dce8ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0559eb500cb787aea",
            "default_route_table_id": "rtb-0835d903084d0c179",
            "default_security_group_id": "sg-054df4d33c99da927",
            "dhcp_options_id": "dopt-0339fad396e893013",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07cfddff981dce8ed",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0835d903084d0c179",
            "owner_id": "672066337402",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}